DownloadInterface: we need to update cookies after connect of downloadinterface, server might set a cookie here (eg dlfree) DlFreeFr: fixed UpFilecom: fixed, fixes #844 ZP: fixed, fixes #838 Scheduler: fixes #855 JDGui: tabchange dont has to wait
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@9477 ebf7c1c2-ba36-0410-9fe8-c592906822b4